Contact Card + phone stuff

--- a/petition-site/src/index.css
+++ b/petition-site/src/index.css
@@ -1,9 +1,12 @@
 ﻿@import "tailwindcss";
 
+/* stylelint-disable-next-line unknownAtRules */
 @custom-variant dark (&:where(.dark, .dark *));
 
-html {
+html,body {
   scroll-behavior: smooth;
+  overflow-x:hidden;
+  width:100%;
 }
 
 /* === Vastago Grotesk Font Faces === */
